<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.single_lottery.ui.user.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.single_lottery.ui.user.events.EventsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.single_lottery.ui.user.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>