...
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <!-- Buttons -->
            <Button
                android:id="@+id/button_user"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Browse Events" />

            <Button
                android:id="@+id/button_organizer"
...
